--- a/css/loggingPage.css
+++ b/css/loggingPage.css
@@ -1,21 +1,32 @@
 *{
+    box-sizing: border-box;
     margin: 0;
+    padding: 0;
 }
 
 .container{
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 0.5fr 1fr 1fr 0.3fr;
+    grid-template-areas: 
+    "nav"
+    "registration"
+    "footer";
+    grid-template-columns: 1fr;
+    grid-template-rows: 0.3fr 1fr 0.3fr;
     min-height: 100vh;
-    gap: 15px;
+    gap: 5px;
 }
-nav{
-    grid-column: 1 / 4;
+
+.nav-container{
+    grid-area: nav;
     background-image: url(../images/andres-jasso-PqbL_mxmaUE-unsplash.jpg);
     background-size: cover;
     opacity: 70%;
     background-repeat: no-repeat;
     background-position: center;
+}
+nav{
+    
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,27 +39,57 @@ h1{
 }
 
 
-form {
-    grid-column: 2 /;
+input{
+    margin-left: 10px;
+}
+
+.form-container{
+    grid-area:registration;
+    display: flex;
     justify-content: center;
+    width: 450px;
+    height: 600px;
+    border: 3px solid rgba(0, 0, 0, 0.3);
+    border-radius: 30px;
+}
+
+input{
+    width: 100%;
+    height: 55px;
+    margin: 10px 0;
+    border-radius: 50px;
+    box-shadow: 0 0 10px rgba (0, 0, 0, 0.2);
+}
+
+legend{
+    text-align: center;
+    margin: 40px 0;
+    color: #000;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.button-container{
+    display: flex;
     align-items: center;
-    border-color: black;
+    justify-content: center;
 
 }
 
-button{
-    grid-row: 3;
-    grid-column: 2 / 3;
-    margin-top: 50px;
-    height: 50px;
-    border-radius: 15px;    
+.button-container button{
+    width: 100%;
+    height: 55px;
+    margin: 10px 0;
+    border-radius: 50px;
+    box-shadow: 0 0 10px rgba (0, 0, 0, 0.2);
 }
-footer{
+
+
+.footer-container{
+    grid-area: footer;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: blueviolet;
-    grid-column: 1 / 4;
-    grid-row:  4;
     
 }
