--- a/css/loggingPage.css
+++ b/css/loggingPage.css
@@ -6,55 +6,89 @@
 
 .container{
     display: grid;
-    grid-template-areas: 
-    "nav"
-    "registration"
-    "footer";
-    grid-template-columns: 1fr;
-    grid-template-rows: 0.3fr 1fr 0.3fr;
+    grid-template-columns: 1fr 0.5fr 1fr;
+    grid-template-rows: 0.3fr 1fr 0.2fr;
     min-height: 100vh;
     gap: 5px;
 }
 
 .nav-container{
-    grid-area: nav;
-    background-image: url(../images/andres-jasso-PqbL_mxmaUE-unsplash.jpg);
+    grid-column: 1 / 4;
     background-size: cover;
-    opacity: 70%;
     background-repeat: no-repeat;
     background-position: center;
 }
 nav{
-    
-
+    padding: 20px 0 ;
     display: flex;
     justify-content: center;
     align-items: center;
-
-
+    background-color: black;
 }
 h1{
-    color: azure;
+    display: flex;
+    justify-content: center;
+    color: rgb(221, 221, 224);
     font-size: 5em;
 }
 
-
+#headTag{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: flex;
+    justify-content: center;
+    font-size: 2.5em;
+    margin-top: 60px;
+    color: rgb(255, 255, 255);
+}
+.error{
+    color: aliceblue;
+    display: block;
+    text-align: center;
+}
+#banner{
+    padding: 20px;
+}
 input{
     margin-left: 10px;
 }
 
+
+
+.form-container:hover{
+    color: aliceblue;
+    background-color: rgb(58, 58, 58);
+    transition: 2s;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); 
+}
+
+::placeholder{
+    color: grey;
+    opacity: 50%;
+}
+body{
+    background-image: url(../images/andres-jasso-PqbL_mxmaUE-unsplash.jpg);
+    background-position: center;
+    background-size: cover;
+    background-color: rgba(58, 57, 57, 0.607);
+}
 .form-container{
-    grid-area:registration;
-    display: flex;
+    grid-column: 2;
+    margin: 50px 0px;
+    background-color: rgb(238, 242, 242);
     justify-content: center;
+    align-items: center;
     width: 450px;
     height: 600px;
     border: 3px solid rgba(0, 0, 0, 0.3);
     border-radius: 30px;
+    padding: 0 20px;
+    
 }
+
 
 input{
     width: 100%;
+    padding:15px;
     height: 55px;
     margin: 10px 0;
     border-radius: 50px;
@@ -64,7 +98,7 @@ input{
 legend{
     text-align: center;
     margin: 40px 0;
-    color: #000;
+    color: #949494;
     font-size: 28px;
     font-weight: bold;
 }
@@ -86,10 +120,11 @@ legend{
 
 
 .footer-container{
-    grid-area: footer;
+    grid-column: 1 / 4;
+    grid-row: 3 / 5;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: blueviolet;
+    background-color: rgb(161, 161, 161);
     
 }
