--- a/css/RetroSneakersStyle.css
+++ b/css/RetroSneakersStyle.css
@@ -222,24 +222,24 @@ img{
 }
 @media (max-width: 768px) {
 .gridContainer {
-    display: flex; /* Change grid to flex for simpler stacking */
-    flex-direction: column; /* Stack all elements vertically */
+    display: flex; 
+    flex-direction: column; 
     min-height: 100vh;
 }
 
 #banner {
-    font-size: 2.5em; /* Reduce font size for readability on small screens */
-    background-image: url(../images/andras-vas-IN5NlcSZJNY-unsplash.jpg); /* Optional mobile-friendly banner image */
+    font-size: 2.5em; 
+    background-image: url(../images/andras-vas-IN5NlcSZJNY-unsplash.jpg); 
     background-position: center;
     background-size: cover;
     padding: 20px;
-    text-align: center; /* Center the text */
+    text-align: center; 
  }
 
 #banner h1 {
     padding: 0 20px;
     background-color: blueviolet;
-    font-size: 1.5em; /* Smaller heading font */
+    font-size: 1.5em; 
 }
 
 .nav-container {
@@ -253,6 +253,7 @@ nav a {
     display: block; 
     border-bottom: 1px solid white;
     padding: 10px;
+    width: 100%;
     font-size: 1.2em;
     text-decoration: none;
     color: white;
@@ -264,37 +265,49 @@ nav a {
     text-align: center;
 }
 .bodyText, .monthSale {
-        margin: 10px; /* Reduce margins for compact view */
-        text-align: center; /* Align text for better readability */
-    }
+    margin: 10px; 
+    text-align: center; 
+}
 
+.contentHead{
+    text-align: center;
+    margin: 20px 0;
+    background-color: blueviolet;
+    padding: 20px;
+}
+.contentParagraph{
+    text-align: center;
+}
 .box, .box2, .box3, .box4 {
     margin: 20px 0;
     justify-content: center;
 }
+.box button, .box2 button, .box3 button, .box4 button{
+    margin: 20px 0 0px 15px
+
+}
 
 img {
     width: 100%; 
-    height: 60vh;/* Make images responsive */
+    height: 60vh;
 }
 
 .footerContainer {
-    flex-direction: row; /* Stack footer content */
+    flex-direction: row; 
     align-items: center;
     padding: 20px;
-    height: auto;
-    }
+    justify-items: center;
+}
 
-    .footerContainer nav {
-        display: inline;
-        font-size: 0.9em;
-    }
+.footerContainer nav a {
+    display: inline;
+    font-size: 0.9em;
+}
 
-    .footerContainer p {
-        font-size: 1em;
-        text-align: center;
-    }
-    
-   
-  }
+.footerContainer p {
+    margin-top: 20px;
+    font-size: 1em;
+    text-align: center;
+}
+}
   
