--- a/css/RetroSneakersStyle.css
+++ b/css/RetroSneakersStyle.css
@@ -27,7 +27,7 @@
 
 }
 
-a:hover{
+nav a:hover{
     background-color: rgb(255, 255, 255);
     border-radius: 20px;
     color: black;
@@ -219,6 +219,41 @@ img{
     color: white;
     text-align: center;
 }
+footer {
+    background-color: #111;
+    color: #fff;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+}
+  
+.footer-section {
+    flex: 1;
+    margin: 10px;
+}
+  
+.footer-logo img {
+    max-width: 100px;
+}
+  
+.footer-links a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    margin: 5px 0;
+    transition: color 0.3s;
+}
+  
+.footer-links a:hover {
+    color: #f7a800;
+}
+  
+.footer-bottom {
+    margin-top: 20px;
+    font-size: 12px;
+    color: #aaa;
+    
+}
 }
 @media (max-width: 768px) {
 .gridContainer {
@@ -297,6 +332,7 @@ img {
     align-items: center;
     padding: 20px;
     justify-items: center;
+    background-color: #111;
 }
 
 .footerContainer nav a {
@@ -309,5 +345,42 @@ img {
     font-size: 1em;
     text-align: center;
 }
+
+footer {
+    background-color: #111;
+    color: #fff;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+}
+  
+.footer-section {
+    flex: 1;
+    margin: 10px;
+}
+  
+.footer-logo img {
+    max-width: 100px;
+}
+  
+.footer-links a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    margin: 5px 0;
+    transition: color 0.3s;
+}
+  
+.footer-links a:hover {
+    color: #f7a800;
+}
+  
+.footer-bottom {
+    margin-top: 20px;
+    font-size: 12px;
+    color: #aaa;
+    
+}
+
 }
   
