--- a/css/loggingPage.css
+++ b/css/loggingPage.css
@@ -116,14 +116,49 @@ legend{
 
 
 .footer-container{
-    grid-column: 1 / 4;
+    grid-column: 1 / 5;
     grid-row: 5;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(161, 161, 161);
+    background-color: #111;
     
 }
+footer {
+    background-color: #111;
+    color: #fff;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .footer-section {
+    flex: 1;
+    margin: 10px;
+  }
+  
+  .footer-logo img {
+    max-width: 100px;
+  }
+  
+  .footer-links a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    margin: 5px 0;
+    transition: color 0.3s;
+  }
+  
+  .footer-links a:hover {
+    color: #f7a800;
+  }
+  
+  .footer-bottom {
+    margin-top: 20px;
+    font-size: 12px;
+    color: #aaa;
+    
+  }
 @media (max-width: 768px) {
 .container {
     display: grid;
