--- a/css/hype.css
+++ b/css/hype.css
@@ -25,8 +25,13 @@ body {
   
   .hero {
     text-align: center;
-    padding: 50px 20px;
+    padding: 100px 20px;
     background-color: #f4f4f4;
+    background-image: url("../images/hy.webp");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+
   }
   
   .slideshow {
@@ -35,7 +40,7 @@ body {
   }
   
   .slider img {
-    width: 100%;
+    width: 50%;
     max-height: 400px;
     object-fit: cover;
   }
@@ -51,4 +56,10 @@ body {
     padding: 20px;
     text-align: center;
   }
-  
+
+  .footer-links a {
+    color: #fff;
+  text-decoration: none;
+  margin: 5px 0;
+  transition: color 0.3s;
+}
