--- a/css/RetroSneakersStyle.css
+++ b/css/RetroSneakersStyle.css
@@ -3,11 +3,13 @@
     margin: 0;
     padding: 0;
 }
+
+@media (min-width: 769px){
 .gridContainer{    
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 2fr 0.5fr 1fr 0.5fr;
-    min-height: 100vh;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 2fr 0.5fr 1fr 0.5fr;
+        min-height: 100vh;
 }
 #banner h1{
     background-color: plum;
@@ -25,7 +27,7 @@
 
 }
 
-a:hover{
+nav a:hover{
     background-color: rgb(255, 255, 255);
     border-radius: 20px;
     color: black;
@@ -39,6 +41,19 @@ nav a{
     text-decoration: none;
     color:rgb(255, 255, 255);
     padding: 15px;
+}
+
+
+
+.bodyText h1{
+    margin-top: 30px;
+}
+.contentParagraph{
+    margin-top: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.bodyText h1, h2{
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .nav-container{
@@ -66,20 +81,36 @@ body{
     text-align: center;
 }
 
+.monthSale P{
+    margin-bottom: 20px;
+}
+
 .bodyText p, .monthSale p {
-    margin-top: 10px;
+    margin-top: 30px;
+}
+.monthSale h1, h2{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 .monthSale{
     grid-column: 2 / 4;
     text-align: center;
 }
 .monthSale h1{
-    margin-top: 10px;
+    margin-top: 50px;
 }
 img{
     width: 350px;
 
 }
+
+.contentHead{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    margin: 10px 0px 10px 5px ;
+}
+.contentParagraph{
+    margin: 0px 20px;   
+}
+
 .box{
     grid-column: 1;
     display: flex;
@@ -123,24 +154,25 @@ img{
     margin-top: 10px;
     width: 350px;
     background-color: bisque;
-    height: 425px;
+    height: 455px;
     border-radius: 15px;
 }
 .box-selection button{
-    margin-top: 42px;
+    margin-top: 33px;
 }
+
 .box-selection2{
     margin-top: 10px;
     width: 350px;
     background-color: antiquewhite;
-    height: 425px;
+    height: 455px;
     border-radius: 15px;
 }
 .box-selection3{
     margin-top: 10px;
     width: 350px;
     background-color: antiquewhite;
-    height: 425px;
+    height: 455px;
     border-radius: 15px;
 }
 .box2 img{
@@ -159,7 +191,7 @@ img{
     margin-top: 10px;
     width: 350px;
     background-color: antiquewhite;
-    height: 425px;
+    height: 455px;
     border-radius: 15px;
 }
 
@@ -171,6 +203,7 @@ img{
     color: white;
     margin-right: 10px;
 }
+
 .footerContainer{
     grid-column: 1 / 5;
     grid-row: 6;
@@ -186,4 +219,168 @@ img{
     color: white;
     text-align: center;
 }
+footer {
+    background-color: #111;
+    color: #fff;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+}
+  
+.footer-section {
+    flex: 1;
+    margin: 10px;
+}
+  
+.footer-logo img {
+    max-width: 100px;
+}
+  
+.footer-links a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    margin: 5px 0;
+    transition: color 0.3s;
+}
+  
+.footer-links a:hover {
+    color: #f7a800;
+}
+  
+.footer-bottom {
+    margin-top: 20px;
+    font-size: 12px;
+    color: #aaa;
+    
+}
+}
+@media (max-width: 768px) {
+.gridContainer {
+    display: flex; 
+    flex-direction: column; 
+    min-height: 100vh;
+}
 
+#banner {
+    font-size: 2.5em; 
+    background-image: url(../images/andras-vas-IN5NlcSZJNY-unsplash.jpg); 
+    background-position: center;
+    background-size: cover;
+    padding: 20px;
+    text-align: center; 
+ }
+
+#banner h1 {
+    padding: 0 20px;
+    background-color: blueviolet;
+    font-size: 1.5em; 
+}
+
+.nav-container {
+    font-size: 1em;
+    padding: 10px;
+    text-align: center;
+}
+
+nav a {
+    background-color: black;
+    display: block; 
+    border-bottom: 1px solid white;
+    padding: 10px;
+    width: 100%;
+    font-size: 1.2em;
+    text-decoration: none;
+    color: white;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.bodyText h2, .monthSale h1{
+    margin: 10px 0;
+    text-align: center;
+}
+.bodyText, .monthSale {
+    margin: 10px; 
+    text-align: center; 
+}
+
+.contentHead{
+    text-align: center;
+    margin: 20px 0;
+    background-color: blueviolet;
+    padding: 20px;
+}
+.contentParagraph{
+    text-align: center;
+}
+.box, .box2, .box3, .box4 {
+    margin: 20px 0;
+    justify-content: center;
+}
+.box button, .box2 button, .box3 button, .box4 button{
+    margin: 20px 0 0px 15px
+
+}
+
+img {
+    width: 100%; 
+    height: 60vh;
+}
+
+.footerContainer {
+    flex-direction: row; 
+    align-items: center;
+    padding: 20px;
+    justify-items: center;
+    background-color: #111;
+}
+
+.footerContainer nav a {
+    display: inline;
+    font-size: 0.9em;
+}
+
+.footerContainer p {
+    margin-top: 20px;
+    font-size: 1em;
+    text-align: center;
+}
+
+footer {
+    background-color: #111;
+    color: #fff;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+}
+  
+.footer-section {
+    flex: 1;
+    margin: 10px;
+}
+  
+.footer-logo img {
+    max-width: 100px;
+}
+  
+.footer-links a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    margin: 5px 0;
+    transition: color 0.3s;
+}
+  
+.footer-links a:hover {
+    color: #f7a800;
+}
+  
+.footer-bottom {
+    margin-top: 20px;
+    font-size: 12px;
+    color: #aaa;
+    
+}
+
+}
+  
